[package]
name = "rust-chip8"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "librchip"
path = "src/lib.rs"

[[bin]]
name = "rchip"
path = "src/main.rs"

[dependencies]
minifb = "0.20"
num = "0.4"
rodio = "0.15"
rand = "0.8"
wasm-bindgen = "0.2.79"
getrandom = { version = "0.2", features = ["js"]  }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile-release]
opt-level = "s"
