[package]
name = "rust-chip8"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "librchip"
path = "src/lib.rs"

[[bin]]
name = "rchip"
path = "src/main.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
num = "0.4"
rand = "0.8"
console_error_panic_hook = { version = "0.1.6", optional=true }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
rodio = "0.15"
minifb = "0.20"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.79"
js-sys = "0.3.56"
getrandom = { version = "0.2", features = ["js"]  }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies.web-sys]
version = "0.3.56"
features = []

[profile-release]
opt-level = "s"

